* Fixed a bug with import students to course when MarketPress is active.
* Handle situation when student try to add comment to non existing module.
* Fixed "Domain Name" for proper translation.
* Added check to import json file.
* Added confirmation popup when student withdraw from the course.
* Fixed non-virtual student login page.
* Removed fakepath file location in file upload.

= 2.0.1 =
------------------------------------------------------
* Fixed: Chat module support for wordpress-chat plugin
* Fixed: Module's unlimited retry attempts
* Fixed: Language Internationalization
* Fixed: compatibility issue with Market Press CSS covering course edit
* Fixed: Student progress migration when Market Press is enabled
* Fixed: Treegrid js error
* Fixed: Units overview link
* Updated WPMU dashboard
* Updated included Market Press version 3.1.2
>>>>>>> coursepress/2.0.2-dev

= 2.0.0 =
-------------------------------------------------
* Overall optimisation through whole new codebase.
* Added 'Focus' course view mode where modules will be viewed individually.
* Added per course completion certificate option.
* Added course completion pages (pre-completion, successful completion, failed).
* Added course notification when the course starts.
* Added unit notification when a unit opens.
* Added instructor feedback notification.
* Added course facilitators.
* Added course import/exports.
* Added overview reports download option.
* Added enhanced units settings
* Added quiz, form, selectable, and discussion modules.
* Improved assessments page.
* Improved discussion management.
* Improved course/students lists.
* Removed section break module.
* Delete certificate when deleting student.

= 1.2.5.8 =
-------------------------------------------------
* Fixed issues with WooCommerce sale price
* Added check for course category specific templates (i.e. archive-course-categoryslug.php)

= 1.2.5.7 =
-------------------------------------------------